k8s/destrule/istio-rules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: vehicle-api-ds
  namespace: vehicle
spec:
  host: vehicle-api-svc
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
  trafficPolicy: # --- enable for adding circuit breaker into DestinationRule
    connectionPool:
      http:
        http1MaxPendingRequests: 1   ## request 수를 1개로 제한 
        maxRequestsPerConnection: 1  ## 1: keep alive 기능 disable
       # maxRetries: 0   # 주어진 시간동안의 최대 재시도 수  Default 1024
    outlierDetection:
      consecutive5xxErrors: 1 # 1번 5xx 에러 발생하면
      interval: 2s    # 매 2초마다 스캔하여  
      baseEjectionTime: 30s ## 30초동안 배제(circuit breaking)처리됨  
      maxEjectionPercent: 100  #100 % 배제처리 
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name:  vehicle-api-svc-route
  namespace: vehicle
spec:
  hosts:
    -  vehicle-api-svc
  http:
    - route:
      - destination:
          host: vehicle-api-svc
          subset: v2
        weight: 80
      - destination:
          host: vehicle-api-svc
          subset: v1
        weight: 20
#       retries:
#         attempts: 3
#         retryOn: gateway-error,connect-failure,refused-stream
#         # perTryTimeout:  1s
#         # retryOn: 5xx
         
#       timeout: 0.5s
# #      fault: # --- enable for inject fault into the route
# #        delay:
# #          percentage:
# #            value: 33
# #          fixedDelay: 3s
